--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "webpack": "^2.6.0",
     "webpack-config": "^7.0.0",
     "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "pug": "^2.0.0-rc.4",
+    "pug-loader": "^2.3.0"
   }
 }
